@@ -1,4 +1,7 @@
 2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+	* scripts/HistFitter.py: argparse bug fixed
+
+2012-12-19 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
 	* scripts/HistFitter.py: argparse.Action classes for arguments using
 	nargs, to prevent eating the configFile. argparse.Action class for the
 	configFile to prevent it then overwriting the proper setting with None.
